// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as a certain size correctly 1`] = `
<div>
  <button
    class="btn btn-lg btn-primary"
    type="button"
  >
    Large Button
  </button>
</div>
`;

exports[`Button renders as a certain type correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary"
    type="submit"
  >
    Submit Button
  </button>
</div>
`;

exports[`Button renders as a link correctly 1`] = `
<div>
  <a
    class="btn btn-md btn-link"
    href="/"
  >
    Link
  </a>
</div>
`;

exports[`Button renders as an icon correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary btn-monospaced"
    type="button"
  >
    +
  </button>
</div>
`;

exports[`Button renders as disabled correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary"
    disabled=""
    type="button"
  >
    Disabled Button
  </button>
</div>
`;

exports[`Button renders as primary style correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary"
    type="button"
  >
    Primary Button
  </button>
</div>
`;

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders with a value correctly 1`] = `
<div>
  <button
    class="btn btn-md btn-primary"
    type="button"
    value="1"
  >
    Value of 1 Button
  </button>
</div>
`;
